# dotfiles

./: .bash_profile  .bashrc  .chezmoiignore  .codespellrc  .dotfiles.sh  .gitignore  .profile  .sops.yaml  .stylua.toml  .tmux.conf  .vimrc  .watchman.json  .zlogin  .zshenv  CLAUDE.md  Makefile  MyDracula.itermcolors  MyDracula.terminal  MyDracula.txt  README.md  _gitignore  codebookignore  codespellignore  com.googlecode.iterm2.plist  darwin.nix  debug_highlight.py  dot_bash_profile  dot_bashrc  dot_profile  dot_tmux.conf  dot_vimrc  dot_zprofile  dot_zshrc  elisp-checkdoc-ignore  flake.nix  harperignore  home.nix  init.vim  justfile  machines.nix  (+2 more)
.adguard/: filter.txt
.config/: starship.toml
.gnupg/: dirmngr.conf  gpg-agent.conf  gpg.conf
.hammerspoon/: .luarc.json  get_browser_url.lua  init.lua
adguard/: filter.txt
chezmoi/: .chezmoiignore
docs/: ansi-escape-sequences.md  ansi-table.md  ascii-table.md  go.mod  gpg.md  nix.md
firefox/: userChrome.css
home-manager/: aerospace.nix  alacritty.nix  alfred.nix  android-nixpkgs.nix  (+95 more)
modules/homeManager/beancount/my_plugins/: amortize.py  auto_narration.py  auto_tags.py  check_account_name_length.py  check_allowed_metadata_keys.py  check_allowed_tags.py  check_currency_decimals.py  check_duplicates.py  check_link_name.py  check_metadata_description.py  check_metadata_narration.py  check_metadata_time.py  check_tag_name.py  currencies.py  disallow_omitted_amounts.py  disallow_pad.py  enforce_simple_postings.py  fixed_asset_cost_basis.py  pyproject.toml  recur.py  require_narration.py  transfer_narration.py
(+709 files in other folders)
